--- a/csharp/VL.MySQL/VL.MySQL.csproj
+++ b/csharp/VL.MySQL/VL.MySQL.csproj
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="VL.Core" Version="2023.5.3-0210-g711a1c31d4" />
+    <PackageReference Include="VL.Core" Version="2025.7.0" />
   </ItemGroup>
 
 </Project>
