--- a/csharp/VL.MySQL/VL.MySQL.csproj
+++ b/csharp/VL.MySQL/VL.MySQL.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MySqlConnector" Version="2.4.0" />
     <PackageReference Include="VL.Core" Version="2025.7.0" />
   </ItemGroup>
 
