moving csproj in src, replacing csharp folder with src
fixing Bouncy Castle subfolder

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /Help/Overview/.vl
 /Help/Topics/.vl
 
-/csharp/VL.MySQL/.vs
-/csharp/VL.MySQL/bin
-/csharp/VL.MySQL/obj
-/csharp/.vs
+/src/VL.MySQL/.vs
+/src/VL.MySQL/bin
+/src/VL.MySQL/obj
+/src/.vs
